tests/semantic/valid/11_function_call.tc
// 测试11: 函数调用和返回值
// 目标：验证函数调用和return表达式
int add(int x, int y) {
    return x + y;
}

int main(void) {
    int result = add(3, 4);
    return result;
}
